# fb2less

./: .gitignore  PKGBUILD  README.md  build_all.sh  fb2less-0.8.4-1-any.pkg.tar.zst  fb2less.1  fb2less.ru.1  fb2less_0.8.4_amd64.deb  pyproject.toml
fb2less_lib/: dialogs.py  epub_parser.py  fb2_parser.py  layout.py  reader.py  storage.py  txt_parser.py
fb2less_lib/locales/: de.json  en.json  ru.json
