[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fb2less"
version = "0.8.5"
description = "Advanced console reader"
# Зависимости пустые, так как curses входит в стандартную библиотеку Python
dependencies = []

[project.scripts]
fb2less = "fb2less_lib.reader:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fb2less_lib*"]

# КРИТИЧЕСКИ ВАЖНО: без этого JSON-ы не попадут в пакет!
[tool.setuptools.package-data]
fb2less_lib = ["locales/*.json"]
