[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fb2less"
version = "0.8.7"
description = "Advanced console reader"
dependencies = []
requires-python = ">=3.7"

[project.scripts]
fb2less = "fb2less_lib.reader:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fb2less_lib*"]
namespaces = false

[tool.setuptools.package-data]
fb2less_lib = ["locales/*.json"]
