[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fb2less"
version = "1.0.2"
description = "Advanced console reader"
dependencies = []
requires-python = ">=3.10"

[project.scripts]
fb2less = "fb2less_lib.reader:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fb2less_lib*"]
namespaces = false

[tool.setuptools.package-data]
fb2less_lib = ["locales/*.json"]
